# rz-libdemangle

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  README.md  extract_tests.py  meson.build  meson_options.txt  rz_libdemangle.h
.github/workflows/: ci.yaml  linter.yml
.reuse/: dep5
fuzz/: fuzz_demangle.c
include/: rz_libdemangle.h
src/: borland.h  cxx.c  cxx.h  demangler.c  demangler_types.h  demangler_util.c  demangler_util.h  java.c  microsoft_demangle.c  microsoft_demangle.h  msvc.c  objc.c  rust.c  swift.c
src/cp/: common.c  common.h  demangle.c  demangle.h  fparam.h  param.h  v2.c  v3.c  vec.h
src/cplusplus/: ast.c  common.c  common.h  demangle.c  demangle.h  dot_graph.c  dot_graph.h  first.h  macros.h  meta.c  param.c  param.h  parser_combinator.c  parser_combinator.h  trace_graph.c  trace_graph.h  types.h  v2.c  v3.c  v3.h  v3_pp.h  vec.h
src/cplusplus/v2/: common.c  common.h  param.c  param.h  v2.c
src/cplusplus/v3/: ast.c  dot_graph.c  dot_graph.h  macros.h  meta.c  parser_combinator.c  parser_combinator.h  types.h  v3.c  v3.h  v3_pp.h
src/cplusplus/v3_impl/: abi_tag.c  abi_tags.c  array_type.c  bare_function_type.c  base_unresolved_name.c  braced_expression.c  builtin_type.c  call_offset.c  class_enum_type.c  closure_prefix.c  closure_prefix_rr.c  closure_prefix_unit.c  ctor_dtor_name.c  cv_qualifiers.c  decltype.c  destructor_name.c  digit.c  discriminator.c  encoding.c  exception_spec.c  expr_primary.c  expression.c  extended_qualifier.c  first.h  float.c  function_param.c  function_type.c  helpers.c  initializer.c  local_name.c  macros.h  mangled_name.c  name.c  nested_name.c  number.c  nv_offset.c  operator_name.c  pointer_to_member_type.c  prefix.c  prefix_nested_class_or_namespace.c  (+28 more)
src/cxx/: ansidecl.h  borland.c  cp-demangle.c  cp-demangle.h  demangle.h  libiberty.h
src/d/: dmd.c
src/gnu_v2/: cplus-dem.c  cplus-dem.h
src/pascal/: pascal.c
src/rust/: punycode.c  rust.c  rust.h  rust_legacy.c  rust_v0.c
test/: demangling_unit.h  minunit.h  test-cli.sh  test_borland.c  test_cxx.00.c  test_cxx.01.c  test_cxx.02.c  test_cxx.03.c  test_cxx.04.c  test_cxx.05.c  test_cxx.06.c  test_cxx.07.c  test_cxx.08.c  test_cxx.09.c  test_cxx.10.c  test_cxx.11.c  test_cxx.12.c  test_cxx.13.c  test_cxx.14.c  test_cxx.15.c  test_cxx.16.c  test_cxx.17.c  test_cxx.18.c  test_cxx.19.c  test_cxx.20.c  test_cxx.21.c  test_cxx.22.c  test_cxx.23.c  test_cxx.24.c  test_cxx.25.c  test_cxx.26.c  test_cxx.27.c  test_cxx.c  test_cxx_base.c  test_cxx_csv_runner.h  test_cxx_ctor_dtor.c  test_cxx_function.c  test_cxx_gnu_v2.c  test_cxx_gnu_v3_llvm.c  test_cxx_gnu_v3_template.c  (+19 more)
test/data/: README.md  cxx_ctor_dtor.csv  cxx_ctor_dtor_disabled.csv  cxx_function.csv  cxx_function_disabled.csv  cxx_lambda.csv  cxx_lambda_disabled.csv  cxx_method.csv  cxx_method_disabled.csv  cxx_operator.csv  cxx_operator_disabled.csv  cxx_other.csv  cxx_other_disabled.csv  cxx_special.csv  cxx_template.csv  cxx_template_disabled.csv  cxx_thunk.csv  cxx_typeinfo.csv  cxx_typeinfo_disabled.csv  cxx_vtable.csv  cxx_vtable_disabled.csv
test/unit/: rz-minunit.h  test_cxx_rules.c  test_vec_impl.c
